# cortex_m

./: .bazeliskrc  .bazelrc  .clang-format  .clang-tidy  .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bazel  defs.bzl  dummy_test.cpp  extensions.bzl  flake.nix  garnix.yaml  rules.bzl  ut.hpp
.github/actions/ci-env-setup/: action.yml
.github/workflows/: check.yml  ci.bazelrc  external-cache.yml  rebase-pull-request.yml
.zed/: settings.json
board/: BUILD.bazel  defs.bzl
board/lm3s6965evb/: BUILD.bazel  memory.ld
boards/: BUILD.bazel
boards/lm3s6965evb/: BUILD.bazel  memory.x
config/: BUILD.bazel
constraints/: BUILD.bazel
cpu/: BUILD.bazel
example/: MODULE.bazel
example/minimal/: BUILD.bazel  README.md  main.cpp
example/semihosting/: BUILD.bazel  README.md  main.cpp  stdout
example/unit_test/: BUILD.bazel  README.md  main.cpp
examples/: BUILD.bazel  main.cpp  startup.s
examples/fmt/: BUILD.bazel  README.md  main.cpp
examples/minimal/: BUILD.bazel  README.md
examples/semihosting/: BUILD.bazel  README.md  main.cpp
examples/ut/: BUILD.bazel  main.cpp
extensions/: flake.nix  flake_package_deps.bzl  local_config.bzl
platform/: BUILD.bazel
rules/: BUILD.bazel  binary_log.bzl  cc_include_linker_script.bzl  cc_test_runner_toolchain.bzl  gdb_qemu_runner.bzl  qemu_output_test.bzl  qemu_runner.bzl  transitions.bzl
rules/private/: runner.bzl
src/startup/: BUILD.bazel  startup.cpp  startup_semihosting.cpp
src/test/: BUILD.bazel  cfg.hpp
test/: BUILD.bazel  failing_assert_test.cpp  failing_assert_test.stderr  failure.cpp  global_ctor_dtor.aarch64.stdout  global_ctor_dtor.cpp  global_ctor_dtor.stdout  hello_semihosting.cpp  hello_semihosting.stdout
toolchain/: BUILD.bazel  cortex-m3.ld  link.x  startup.cpp  startup_cortex-m3.cpp
tools/: BUILD.bazel  bazel  flake.nix  shell_executable.bazelrc
tools/bazel-wrapper/: flake.nix
tools/qemu/: BUILD.bazel  defs.bzl
