load("@rules_cc//cc:defs.bzl", "cc_test")
load("//rules:cc_test_runner_toolchain.bzl", "cc_test_runner_toolchain")
load("//rules:qemu_runner.bzl", "qemu_runner")
load("//rules:transitions.bzl", "transition_config_test")

xcode_config(name = "host_xcodes")

filegroup(
    name = "format-config",
    srcs = [".clang-format"],
    visibility = [":__subpackages__"],
)

filegroup(
    name = "tidy-config",
    srcs = [".clang-tidy"],
    visibility = [":__subpackages__"],
)

qemu_runner(
    name = "qemu_runner",
    visibility = ["//visibility:public"],
)

qemu_runner(
    name = "qemu_semihosting_runner",
    extra_args = ["-semihosting"],
)

cc_test_runner_toolchain(
    name = "qemu_cc_test_runner_toolchain",
    test_runner = ":qemu_semihosting_runner",
)

toolchain(
    name = "qemu_test_runner_toolchain",
    target_compatible_with = [
        "@platforms//os:none",
    ],
    toolchain = ":qemu_cc_test_runner_toolchain",
    toolchain_type = "@bazel_tools//tools/cpp:test_runner_toolchain_type",
)

cc_test(
    name = "dummy_test",
    srcs = ["dummy_test.cpp"],
)

transition_config_test(
    name = "dummy_test.lm3s6965evb",
    src = ":dummy_test",
    platform = "//platform:lm3s6965evb",
    semihosting = "enabled",
)
