load("//rules:cc_test_runner_toolchain.bzl", "cc_test_runner_toolchain")
load("//rules:gdb_qemu_runner.bzl", "gdb_qemu_runner")
load("//rules:qemu_runner.bzl", "qemu_runner")

xcode_config(name = "host_xcodes")

filegroup(
    name = "format-config",
    srcs = [".clang-format"],
    visibility = [":__subpackages__"],
)

filegroup(
    name = "tidy-config",
    srcs = [".clang-tidy"],
    visibility = [":__subpackages__"],
)

alias(
    name = "gdb",
    actual = "@gdb",
    visibility = ["//visibility:public"],
)

alias(
    name = "qemu-system-arm",
    actual = "@qemu-system-arm",
    visibility = ["//visibility:public"],
)

qemu_runner(
    name = "qemu_runner",
    visibility = ["//visibility:public"],
)

gdb_qemu_runner(
    name = "gdb_qemu_runner",
    visibility = ["//visibility:public"],
)

cc_test_runner_toolchain(
    name = "qemu_cc_test_runner_toolchain",
    test_runner = "//rules:qemu_semihosting_runner",
)

toolchain(
    name = "qemu_test_runner_toolchain",
    target_compatible_with = [
        "@platforms//os:none",
    ],
    toolchain = ":qemu_cc_test_runner_toolchain",
    toolchain_type = "@bazel_tools//tools/cpp:test_runner_toolchain_type",
)
