workspace(name = "stm32")

load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

git_repository(
    name = "arm_none_eabi",
    commit = "2a3033a2cceeaea0be0476b9bdecde4d0d00a603",
    remote = "https://github.com/oliverlee/bazel-arm-none-eabi",
)

load("@arm_none_eabi//:deps.bzl", "arm_none_eabi_deps")

arm_none_eabi_deps()

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "bazel_skylib",
    sha256 = "f7be3474d42aae265405a592bb7da8e171919d74c16f082a5457840f06054728",
    urls = [
        "https://mirror.bazel.build/github.com/bazelbuild/bazel-skylib/releases/download/1.2.1/bazel-skylib-1.2.1.tar.gz",
        "https://github.com/bazelbuild/bazel-skylib/releases/download/1.2.1/bazel-skylib-1.2.1.tar.gz",
    ],
)

load("@bazel_skylib//:workspace.bzl", "bazel_skylib_workspace")

bazel_skylib_workspace()

http_archive(
    name = "fmt",
    build_file_content = """
load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "fmt",
    hdrs = glob(["include/**/*"]),
    defines = [
        "FMT_HEADER_ONLY",
        "FMT_EXCEPTIONS=0",
        "FMT_USE_FLOAT=0",
        "FMT_USE_DOUBLE=0",
        "FMT_USE_LONG_DOUBLE=0",
        "FMT_REDUCE_INT_INSTANTIATIONS=1",

        #https://github.com/fmtlib/fmt/issues/1803#issuecomment-669983301
        "FMT_STATIC_THOUSANDS_SEPARATOR=\\\\',\\\\'",
    ],
    includes = ["include"],
    visibility = ["//visibility:public"],
)
""",
    sha256 = "09b9759c9349b54d96f11dc64c35b721a557705629cd8f77fad62e5f10fe934e",
    strip_prefix = "fmt-147e8ca58076e94cd86430328f6b8b3f844b4439",
    url = "https://github.com/fmtlib/fmt/archive/147e8ca58076e94cd86430328f6b8b3f844b4439.tar.gz",
)
