package(default_visibility = ["//visibility:public"])

constraint_setting(name = "board")

board_packages = [
    "@stm32//boards/{}".format(brd)
    for brd in subpackages(include = ["*"])
]

filegroup(
    name = "memory_region",
    srcs = select(
        {
            bp: ["{}:memory_region".format(bp)]
            for bp in board_packages
        },
        no_match_error = """Unable to determine board memory region.

Try selecting a valid platform or avoiding this filegroup by
manually specifying linker files.

Conditions checked:
  {}""".format("\n  ".join(board_packages)),
    ),
)

filegroup(
    name = "maybe_memory_region",
    srcs = select(
        {
            bp: ["{}:memory_region".format(bp)]
            for bp in board_packages
        } | {"//conditions:default": []},
    ),
)
