load("@bazel_skylib//rules:common_settings.bzl", "bool_flag", "string_flag")

bool_flag(
    name = "semihosting",
    build_setting_default = False,
    visibility = ["//visibility:public"],
)

string_flag(
    name = "machine",
    build_setting_default = "",
    visibility = ["//visibility:public"],
)

config_setting(
    name = "semihosting_enabled",
    flag_values = {
        ":semihosting": "True",
    },
)

config_setting(
    name = "semihosting_disabled",
    flag_values = {
        ":semihosting": "False",
    },
)
