load("@bazel_skylib//lib:selects.bzl", "selects")
load("@arm_none_eabi//:deps.bzl", "targets")

valid = [cpu for cpu in targets if cpu != "arm"]

valid_cpus = ["@arm_none_eabi//platforms/cpu:{}".format(cpu) for cpu in valid]

valid_names = "any of [{}]".format(", ".join(valid))

constraint_setting(name = "dummy")

constraint_value(
    name = valid_names,
    constraint_setting = ":dummy",
)

selects.config_setting_group(
    name = "cpu",
    match_any = valid_cpus + [":{}".format(valid_names)],
    visibility = ["//visibility:public"],
)
