load("//rules:qemu_output_test.bzl", "qemu_output_test")

[
    qemu_output_test(
        name = basename + "_test",
        size = "small",
        srcs = [basename + ".cpp"],
        expected_output = basename + ".stdout",
        platform = "//platform:lm3s6965evb",
    )
    for basename in [
        "hello_semihosting",
        "global_ctor_dtor",
    ]
]
