load("//rules:qemu_output_test.bzl", "qemu_output_test")
load("//rules:qemu_runner.bzl", "qemu_runner")

qemu_output_test(
    name = "hello_semihosting_test",
    size = "small",
    srcs = ["hello_semihosting.cpp"],
    expected_stdout = "hello_semihosting.stdout",
    platform = "//platform:lm3s6965evb",
)

qemu_output_test(
    name = "global_ctor_dtor_test",
    size = "small",
    srcs = ["global_ctor_dtor.cpp"],
    expected_stdout = select({
        "@platforms//cpu:aarch64": "global_ctor_dtor.aarch64.stdout",
        "//conditions:default": "global_ctor_dtor.stdout",
    }),
    platform = "//platform:lm3s6965evb",
)

[
    (
        qemu_runner(
            name = "qemu_failure_runner_{}".format(exit_code),
            exit_code = exit_code,
        ),
        qemu_output_test(
            name = "failure_{}_test".format(exit_code),
            size = "small",
            srcs = ["failure.cpp"],
            local_defines = ["EXIT_CODE={}".format(exit_code)],
            platform = "//platform:lm3s6965evb",
            run_under = ":qemu_failure_runner_{}".format(exit_code),
            skip_expected_check = True,
        ),
    )
    for exit_code in [
        1,
        2,
        3,
    ]
]

qemu_output_test(
    name = "failing_assert_test",
    size = "small",
    srcs = ["failing_assert_test.cpp"],
    copts = ["-UNDEBUG"],
    expected_stderr = "failing_assert_test.stderr",
    platform = "//platform:lm3s6965evb",
    run_under = ":qemu_failure_runner_1",
)
