load("@cortex_m//rules:transitions.bzl", "transition_config_binary")
load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "binary",
    srcs = ["main.cpp"],
)

# `transition_config_binary` must be run with
# `--run_under=@cortex_m//:qemu_runner` if using a non-host platform since we
# cannot apply a transition to the `--run_under` option.

transition_config_binary(
    name = "semihosting",
    src = ":binary",
    semihosting = "enabled",
)

transition_config_binary(
    name = "semihosting.lm3s6965evb",
    src = ":binary",
    platform = "@cortex_m//platform:lm3s6965evb",
    semihosting = "enabled",
)
